--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="utf-8">
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Main</title>
+    </head>
 
-  <body>
-
-    <div>Redirect URL: <span id="redirect-url"></span></div>
-
-    <script src="options.js"></script>
-
-  </body>
-
+    <body>
+        <div id="elm"></div>
+        <script type="text/javascript" src="options.js"></script>
+        <script type="text/javascript" src="elm-options-loader.js"></script>
+    </body>
 </html>
