--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -5,8 +5,9 @@
         <title>Main</title>
     </head>
 
-    <body>
+    <body style="padding: 1px">
         <div id="elm"></div>
+        <script type="application/javascript" src="browser-polyfill.min.js"></script>
         <script type="text/javascript" src="options.js"></script>
         <script type="text/javascript" src="elm-options-loader.js"></script>
     </body>
