--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -6,6 +6,7 @@
 
     <body>
         <div id="elm"></div>
+        <script type="application/javascript" src="browser-polyfill.min.js"></script>
         <script type="text/javascript" src="elm.js"></script>
         <script type="text/javascript" src="elm-popup-loader.js"></script>
     </body>
